# live-2016

./: .gitignore  BootTidal-1.0-latency.hs  BootTidal.hs  boot-midi-0.8.tidal  boot.tidal  test.tidal
L2L/: 00-boot.tidal  01-zero-likes.tidal  013-rytm-thing.tidal  02-ali.tidal  02-mint.tidal  03-013-rytm-thing.tidal  04-braid.tidal  05-ali2.tidal  05-bit-dust.tidal  06-wreckage.tidal  07-risc-chip.tidal  08-beacon.tidal  09-info.tidal  10-ali.tidal  11-dot-lean.tidal  zero-likes.tidal
algofive/: 00-boot.tidal  01-al.tidal  02-14.tidal  03-info.tidal  05-risc-chip.tidal
bridgetahn/: 00-boot.tidal  00-risc-chip.tidal  01-bluejay.tidal  02-fl.tidal  03-info.tidal  04-c-code.tidal  04-risc-chip.tidal  05-a-b-code.tidal  06-d-code.tidal  07-ignore-file.tidal  08-river-cairn.tidal  09-bitdust.tidal  _everything.tidal  a-b-code.tidal  bitdust.tidal  bombs.tidal  boot.tidal  d-code.tidal  falcon.tidal  fl.tidal  ignore-file.tidal  info.tidal  mint.tidal  risc-chip.tidal  river-cairn.tidal
carls-house-2017-03-03/: 00-boot.tidal  02-mint.tidal  05-dot-lean.tidal  05-risc-chip.tidal  06-dot-lean.tidal  06-tilde.tidal  07-info.tidal  09-32-bit-falcon.tidal  32-bit-falcon.tidal  __list.txt  base.flp  bit-dust.tidal  ignore-file.tidal  razor.tidal  socket.tidal  tilde.tidal
cyborg-2016-08-03/: 007-wreckage.tidal  01-zerolikes.tidal  02-info.tidal  03-004.tidal  04-005.tidal  05-008.tidal  06-009.tidal  07-ringsurfing.tidal  08-002.tidal  _boot.tidal
euro2016/: 00-boot.tidal  test.tidal
euro2017/midi/: rytmera-midi.cabal
euro2017/midi/Rytmera/: Harmor.hs  Rytm.hs
(+309 files in other folders)
